@@ -3,7 +3,7 @@
 
   <groupId>com.twitter</groupId>
   <artifactId>parquet</artifactId>
-  <version>1.4.3-SNAPSHOT</version>
+  <version>1.5.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Parquet MR</name>
@@ -85,9 +85,9 @@
     <shade.prefix>parquet</shade.prefix>
     <hadoop.version>1.1.0</hadoop.version>
     <cascading.version>2.5.3</cascading.version>
-    <parquet.format.version>2.0.0</parquet.format.version>
+    <parquet.format.version>2.1.0</parquet.format.version>
     <log4j.version>1.2.17</log4j.version>
-    <previous.version>1.4.2</previous.version>
+    <previous.version>1.4.0</previous.version>
     <thrift.executable>thrift</thrift.executable>
   </properties>
 
@@ -177,6 +177,37 @@
   <build>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>1.3.1</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.semver</groupId>
+              <artifactId>enforcer-rule</artifactId>
+              <version>0.9.23</version>
+            </dependency>
+         </dependencies>
+         <executions>
+           <execution>
+             <id>check</id>
+             <phase>verify</phase>
+             <goals>
+               <goal>enforce</goal>
+             </goals>
+             <configuration>
+               <rules>
+                 <requireBackwardCompatibility implementation="org.semver.enforcer.RequireSemanticVersioningConformance">
+                   <dumpDetails>true</dumpDetails>
+                   <previousVersion>${previous.version}</previousVersion>
+                   <excludes>
+                     <exclude>parquet/org/**</exclude>
+                   </excludes>
+                 </requireBackwardCompatibility>
+               </rules>
+             </configuration>
+           </execution>
+         </executions>
+        </plugin>
         <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
@@ -272,6 +303,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.0.2</version>
         <configuration>
+          <argLine>-XX:MaxPermSize=256m</argLine>
           <source>1.6</source>
           <target>1.6</target>
           <encoding>UTF-8</encoding>
